# opendetection

./: README.md
cmake/: od_mandatory_dependency.cmake
common/: CMakeLists.txt
common/datasets/: CMakeLists.txt  ImageNet.cpp  ImageNet.h  MSCoco.cpp  MSCoco.h  ODDatasets.cpp  ODDatasets.h  PascalVOC.cpp  PascalVOC.h  README.md  a.out  test.cpp
data/Classification/imagenet/models/bvlc_reference_caffenet/: deploy.prototxt  solver.prototxt  train_val.prototxt
examples/objectdetector/: CMakeLists.txt  od_load_dataset.cpp
examples/objectdetector/od_ssd_classification/: CMakeLists.txt  classify.cpp  prepare.cpp
examples/objectdetector/od_ssd_detect/: CMakeLists.txt  detect.cpp  preprocess.cpp  train.cpp
